--- a/getdown-ux-console/src/main/polymer/console/src/download-view.html
+++ b/getdown-ux-console/src/main/polymer/console/src/download-view.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<link rel="import" href="url-input.html">
 <link rel="import" href="task-list.html">
 
 <dom-module id="download-view">
@@ -14,8 +13,8 @@
 		</style>
 
 		<div class="card">
-			<url-input></url-input>
 			<task-list></task-list>
+			<job-list></job-list>
 		</div>
 	</template>
 
