--- a/getdown-ux-console/src/main/polymer/console/src/task-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-actions.html
@@ -52,10 +52,8 @@
 			}
 		}
 
-		GetdownConsole.actions = {
-			fetchTasks,
-			addTasks
-		}
+		GetdownConsole.actions.fetchTasks=fetchTasks
+		GetdownConsole.actions.addTasks=addTasks
 
 	}());
 </script>
