--- a/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
+++ b/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
@@ -49,6 +49,7 @@
 		}
 	}
 
-	GetdownConsole.rootReducer = Redux.combineReducers({tasksReducer,configReducer})
+	GetdownConsole.reducers.tasksReducer=tasksReducer
+	GetdownConsole.reducers.configReducer=configReducer
 }());
 </script>
