--- a/getdown-ux-console/src/main/polymer/console/index.html
+++ b/getdown-ux-console/src/main/polymer/console/index.html
@@ -60,19 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<meta name="msapplication-tap-highlight" content="no">
 
 	<script>
-		/**
-		 * [polymer-root-path]
-		 *
-		 * By default, we set `Polymer.rootPath` to the server root path (`/`).
-		 * Leave this line unchanged if you intend to serve your app from the root
-		 * path (e.g., with URLs like `my.domain/` and `my.domain/view1`).
-		 *
-		 * If you intend to serve your app from a non-root path (e.g., with URLs
-		 * like `my.domain/my-app/` and `my.domain/my-app/view1`), edit this line
-		 * to indicate the path from which you'll be serving, including leading
-		 * and trailing slashes (e.g., `/my-app/`).
-		 */
-		window.Polymer = {rootPath: '/'};
+		window.Polymer = {rootPath: '/console/'};
 
 		// Load and register pre-caching Service Worker
 		if ('serviceWorker' in navigator) {
@@ -87,7 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	</script>
 
 	<!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
-	<script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+	<script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 	<!-- Load your application shell -->
 	<link rel="import" href="src/getdown-app.html">
 
