--- a/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
+++ b/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
@@ -78,7 +78,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
         <app-toolbar><span flex><img  align="bottom" src="images/icon-getdown.png" style="width:32px;height:32px;"/>&nbsp;getdown</span></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="download" href="[[rootPath]]downloads">Downloads</a>
+          <a name="download" href="[[rootPath]]download">Downloads</a>
         </iron-selector>
       </app-drawer>
 
