--- a/getdown-ux-console/src/main/polymer/console/index.html
+++ b/getdown-ux-console/src/main/polymer/console/index.html
@@ -60,16 +60,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<meta name="msapplication-tap-highlight" content="no">
 
 	<script>
-		window.Polymer = {rootPath: '/console/'};
-
-		// Load and register pre-caching Service Worker
-		if ('serviceWorker' in navigator) {
-			window.addEventListener('load', function () {
-				navigator.serviceWorker.register('service-worker.js', {
-					scope: Polymer.rootPath,
-				});
-			});
-		}
+		window.Polymer = {rootPath: '/'};
+		Polymer.rootPath='/';
 
 		const GetdownConsole = {reducers:{},actions:{}}
 	</script>
