initialize task list data on start

--- a/getdown-ux-console/src/main/polymer/console/src/download-view.html
+++ b/getdown-ux-console/src/main/polymer/console/src/download-view.html
@@ -2,6 +2,7 @@
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="task-list.html">
 <link rel="import" href="job-list.html">
+<link rel="import" href="url-input.html">
 
 <dom-module id="download-view">
 	<template>
@@ -14,7 +15,8 @@
 		</style>
 
 		<div class="card">
-			<task-list></task-list>
+			<url-input></url-input>
+			<task-list ></task-list>
 			<job-list></job-list>
 		</div>
 	</template>
