--- a/getdown-ux-console/src/main/polymer/console/src/url-input.html
+++ b/getdown-ux-console/src/main/polymer/console/src/url-input.html
@@ -36,7 +36,7 @@
 			<paper-input class="flex" id="urlInput" label="URL" type="text"  >
 			</paper-input>
 
-			<paper-button class="indigo" on-tap="addTapped">Add</paper-button>
+			<paper-button class="indigo" on-tap="addTapped">+</paper-button>
 		</div>
 	</template>
 
