--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -19,7 +19,7 @@
 		<vaadin-grid id="grid" items="[[jobs]]" size="40">
 			<vaadin-grid-selection-column auto-select>
 			</vaadin-grid-selection-column>
-			<vaadin-grid-column>
+			<vaadin-grid-column resizable>
 				<template class="header">
 					<vaadin-grid-sorter path="name">Name</vaadin-grid-sorter>
 				</template>
@@ -32,15 +32,15 @@
 			<vaadin-grid-column>
 				<template class="header">Progress</template>
 				<template>
-					<span>[[item.progress]]/[[item.size]]</span>
+					<span>[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]%</span>
 					<paper-progress style="width: 100%"
-					                value="[[_percentage(item.progress,item.size)]]"
+					                value="[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]"
 					                id="paper_progress">
-						[[_percentage(item.progress,item.size)]]
+						[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]
 					</paper-progress>
 				</template>
 			</vaadin-grid-column>
-			<vaadin-grid-column>
+			<vaadin-grid-column resizable>
 				<template class="header">Last message</template>
 				<template>[[item.message]]</template>
 			</vaadin-grid-column>
@@ -64,6 +64,17 @@
 					}
 				}
 			}
+
+			connectedCallback(){
+				super.connectedCallback()
+				this.dispatch('fetchJobs')
+			}
+
+			_percentage(gw,pw){
+				return Math.round(((pw/gw)*100)*100)/100
+			}
+
+
 		}
 
 		window.customElements.define(JobList.is, JobList);
