--- a/getdown-ux-console/src/main/polymer/console/src/task-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-actions.html
@@ -5,9 +5,13 @@
 			return {type: 'POST_TASK'}
 		}
 
+		function deleteTask(){
+			return {type: 'DELETE_TASK'}
+		}
+
 		function addTasks(urls){
 			return dispatch =>{
-				postTask()
+				deleteTask()
 				fetch("http://localhost:8001/api/tasks", {
 					method: "POST",
 					headers: {
@@ -18,6 +22,22 @@
 				})
 					.then(response => response.json())
 					.then(json=> dispatch(tasksAdded(json)))
+			}
+		}
+
+		function removeTasks(tasks){
+			return dispatch =>{
+				postTask()
+				fetch("http://localhost:8001/api/tasks", {
+					method: "DELETE",
+					headers: {
+						'Accept': 'application/json, text/plain, */*',
+						'Content-Type': 'application/json'
+					},
+					body: JSON.stringify(tasks)
+				})
+						.then(response => response.json())
+						.then(json=> dispatch(tasksRemoved(json)))
 			}
 		}
 
@@ -43,6 +63,14 @@
 			}
 		}
 
+		function tasksRemoved(json) {
+			return {
+				type: 'TASKS_REMOVED',
+				tasks: json.content,
+				receivedAt: Date.now()
+			}
+		}
+
 		function fetchTasks() {
 			return dispatch => {
 				dispatch(requestTasks())
@@ -54,6 +82,7 @@
 
 		GetdownConsole.actions.fetchTasks=fetchTasks
 		GetdownConsole.actions.addTasks=addTasks
+		GetdownConsole.actions.removeTasks=removeTasks
 
 	}());
 </script>
