--- a/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
+++ b/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
@@ -23,6 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="app-icons.html">
 
 <link rel="lazy-import" href="download-view.html">
+<link rel="lazy-import" href="config-view.html">
 <link rel="lazy-import" href="my-view404.html">
 
 <dom-module id="getdown-app">
@@ -80,6 +81,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="download" href="[[rootPath]]download">Downloads</a>
         </iron-selector>
+        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+          <a name="config" href="[[rootPath]]config">Config</a>
+        </iron-selector>
       </app-drawer>
 
       <!-- Main content -->
@@ -98,6 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <download-view name="download"></download-view>
+          <config-view name="config"></config-view>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
