--- a/getdown-ux-console/src/main/polymer/console/src/job-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-actions.html
@@ -8,7 +8,7 @@
 		function addJobs(handles){
 			return dispatch =>{
 				postJob()
-				fetch("http://localhost:8001/api/jobs", {
+				fetch(GetdownConsole.apiLocation()+"/jobs", {
 					method: "POST",
 					headers: {
 						'Accept': 'application/json, text/plain, */*',
@@ -46,7 +46,7 @@
 		function fetchJobs() {
 			return dispatch => {
 				dispatch(requestJobs())
-				return fetch('http://localhost:8001/api/jobs')
+				return fetch(GetdownConsole.apiLocation()+"/jobs")
 					.then(response => response.json())
 					.then(json => dispatch(receiveJobs( json)))
 			}
