--- a/getdown-ux-console/src/main/polymer/console/src/task-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-actions.html
@@ -12,7 +12,7 @@
 		function addTasks(urls){
 			return dispatch =>{
 				deleteTask()
-				fetch("http://localhost:8001/api/tasks", {
+				fetch(GetdownConsole.apiLocation()+"/tasks", {
 					method: "POST",
 					headers: {
 						'Accept': 'application/json, text/plain, */*',
@@ -28,7 +28,7 @@
 		function removeTasks(tasks){
 			return dispatch =>{
 				postTask()
-				fetch("http://localhost:8001/api/tasks", {
+				fetch(GetdownConsole.apiLocation()+"/tasks", {
 					method: "DELETE",
 					headers: {
 						'Accept': 'application/json, text/plain, */*',
@@ -74,7 +74,7 @@
 		function fetchTasks() {
 			return dispatch => {
 				dispatch(requestTasks())
-				return fetch('http://localhost:8001/api/tasks')
+				return fetch(GetdownConsole.apiLocation()+"/tasks")
 					.then(response => response.json())
 					.then(json => dispatch(receiveTasks( json)))
 			}
